# amp

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  COMMUNITY_VS_ENTERPRISE.md  CONTRIBUTING.md  HOSTING.md  Makefile  POSITIONING.md  README.md  SECURITY.md  SPECS.md  SUPPORT.md  THREAT_MODEL.md  buf.gen.yaml  docker-compose.yml  go.mod  go.sum
.github/workflows/: ci.yml
deployments/: README.md
deployments/init-db/: 01_schema.sql
deployments/public/: .env.example  Caddyfile  README.md  docker-compose.yml  nats-server.conf  test-services.sh
deployments/terraform/aws/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
docs/: CONTROL_PLANE_CHECKLIST.md  CONTROL_PLANE_EVOLUTION.md  CONTROL_PLANE_GAPS.md  CONTROL_PLANE_SECURITY.md  DATA_PLANE_RELAY.md  DEPLOY_MATCHING_AWS.md  ENTERPRISE_TEST_SETUP.md  OBSERVABILITY_ARCHITECTURE.md
examples/enterprise-mesh-demo/: README.md  package-lock.json  package.json
examples/enterprise-mesh-demo/agent-executive/: index.js  package-lock.json  package.json
examples/enterprise-mesh-demo/agent-finance/: agent-card.json  index.js  package-lock.json  package.json
examples/enterprise-mesh-demo/agent-hr/: agent-card.json  index.js  package-lock.json  package.json
examples/enterprise-mesh-demo/agent-legal/: agent-card.json  index.js  package-lock.json  package.json
examples/nebula-mesh-demo/: README.md  package.json
examples/nebula-mesh-demo/agent-consumer/: index.js  mock-model.js  package-lock.json  package.json
examples/nebula-mesh-demo/agent-dumb/: index.js  package-lock.json  package.json
examples/nebula-mesh-demo/agent-math-expert/: agent-card.json  index.js  package-lock.json  package.json
examples/nebula-mesh-demo/agent-provider/: agent-card.json  index.js  mock-model.js  package-lock.json  package.json
examples/public-mesh-openai-demo/: .env.example  .gitignore  README.md  SECURITY_ROLLOUT.md  package.json
examples/public-mesh-openai-demo/consumer/: consumer.json  index.js  package.json
examples/public-mesh-openai-demo/observability/: docker-compose.yml
examples/public-mesh-openai-demo/observability/grafana/dashboards/: mesh-provider-latency.json
examples/public-mesh-openai-demo/observability/grafana/provisioning/dashboards/: dashboards.yml
examples/public-mesh-openai-demo/observability/prometheus/: prometheus.yml
examples/public-mesh-openai-demo/provider/: agent-card.json  index.js  package.json
examples/public-mesh-openai-demo/scripts/: generate-dev-certs.sh  generate-ed25519-keypair.js  load-consumers.js  run-matching.sh  test-dataplane-with-token.js  validate-dataplane-auth.js
examples/public-mesh-openai-demo/shared/: dataplane.js  security.js  simple-token.js
examples/public-mesh-openai-demo/test/: dataplane.test.js  security.test.js
fixtures/: example-agent-card.json
pkg/agentcard/: model.go  validate.go
pkg/cloudevents/: amp.go  amp_test.go
pkg/did/: did.go  did_test.go
pkg/events/: payloads.go
pkg/nats/: e2e_control_plane_test.go  publish_subscribe_test.go
pkg/proto/amp/dataplane/v1/: dataplane.pb.go  dataplane_grpc.pb.go
pkg/session/: simple.go  simple_test.go  token.go  token_test.go
proto/: buf.yaml
schemas/: agent-card.schema.json
sdk/rust/: .gitignore  Cargo.toml  README.md
sdk/rust/mesh-client/: Cargo.toml
sdk/rust/mesh-client/src/: lib.rs
sdk/rust/mesh-dataplane/: Cargo.toml  README.md
sdk/rust/mesh-dataplane/examples/: consumer.rs  e2e.rs  provider.rs
sdk/rust/mesh-dataplane/src/: client.rs  lib.rs  server.rs
sdk/rust/mesh-dataplane/tests/: integration_test.rs
sdk/rust/mesh-proto/: Cargo.toml  build.rs
sdk/rust/mesh-proto/src/: lib.rs
sdk/rust/mesh-relay/: Cargo.toml
sdk/rust/mesh-relay/src/: lib.rs
sdk/rust/mesh-sdk/: Cargo.toml
sdk/rust/mesh-sdk/src/: lib.rs
sdk/rust/mesh-session/: Cargo.toml
sdk/rust/mesh-session/src/: enterprise.rs  lib.rs
sdk/rust/mesh-types/: Cargo.toml
sdk/rust/mesh-types/src/: lib.rs
sdk/rust/scripts/: publish_crates.sh
sdk/ts/: README.md  package-lock.json  package.json
sdk/ts/docs/: API_DESIGN.md
sdk/ts/examples/: register.js  request.js
sdk/ts/proto/amp/dataplane/v1/: dataplane.proto
sdk/ts/scripts/: copy-proto.mjs
sdk/ts/src/: client.ts  cloudevents.ts  index.ts  nats-url.ts  relay.ts
sdk/ts/src/contracts/: agent-card.ts  events.ts
sdk/ts/src/dataplane/: consumer.ts  crypto.ts  grpc.ts  metrics.ts  provider.ts  server.ts
sdk/ts/src/session/: simple.ts
sdk/ts/src/testing/: fixtures.ts
sdk/ts/test/: dataplane.crypto.test.js  dataplane.grpc.test.js  dataplane.provider.test.js  request-reply.test.js  session.simple.test.js
services/matching/: Dockerfile  cache_registry.go  embedding_provider.go  embedding_scorer.go  engine.go  engine_test.go  jetstream.go  jetstream_test.go  main.go  matching_test.go  presence.go  registry_client.go  semantic.go  semantic_test.go  tfidf.go
services/registry/: Dockerfile  main.go  server.go  server_test.go  store.go
services/relay/: Dockerfile  main.go  relay.go
website/: package-lock.json  package.json
website/app/: globals.css  layout.tsx  page.tsx
website/components/landing/: CtaSection.tsx  ExamplesSection.tsx  FeaturesSection.tsx  Footer.tsx  HeroSection.tsx  HowItWorksSection.tsx  Navbar.tsx  ProblemSection.tsx  QuickStartSection.tsx
website/components/landing/ui/: ArchDiagram.tsx  CodeBlock.tsx  Terminal.tsx
website/lib/: constants.ts
