[package]
name        = "mesh-dataplane"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "gRPC DataPlane server and consumer client for the Mesh Protocol (Handshake/Transfer/Result)"
keywords    = ["mesh-protocol", "grpc", "tonic", "ai-agents", "dataplane"]
categories  = ["network-programming", "asynchronous"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tonic = { version = "0.9", features = ["transport"] }
mesh-proto = { path = "../mesh-proto" }
mesh-session = { path = "../mesh-session" }
anyhow = "1.0"
bytes = "1.4"
dashmap = "5.4"
futures = "0.3"
async-stream = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
subtle = "2.4"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
