[package]
name        = "mesh-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Mesh Protocol Rust SDK — facade crate re-exporting mesh-client, mesh-dataplane, mesh-session and mesh-types"
keywords    = ["mesh-protocol", "ai-agents", "sdk", "grpc", "nats"]
categories  = ["network-programming", "asynchronous"]

[dependencies]
mesh-client = { path = "../mesh-client", version = "0.1.0" }
mesh-dataplane = { path = "../mesh-dataplane", version = "0.1.0" }
mesh-types = { path = "../mesh-types", version = "0.1.0" }
mesh-session = { path = "../mesh-session", version = "0.1.0" }
mesh-relay = { path = "../mesh-relay", version = "0.1.0" }
