[package]
name        = "mesh-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core data types for the Mesh Protocol Rust SDK (AgentCard, MatchOrReject, CloudEvent payloads)"
keywords    = ["mesh-protocol", "ai-agents", "cloudevents", "did"]
categories  = ["network-programming", "data-structures"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
